<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorText"
            android:text="Agrega una tarjeta en la que recibirás el pago de las consultas que realices."
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:id="@+id/edtAlias"
            android:hint="@string/alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:id="@+id/edtTitular"
            android:hint="@string/titular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:background="@drawable/solid_border"
            android:layout_marginTop="30dp"
            android:id="@+id/btnLector"
            android:textColor="@color/colorTextGray"
            android:text="Escanear tarjeta"
            android:textAllCaps="false"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
        </Button>

        <EditText
            android:maxLength="19"
            android:maxLines="1"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:id="@+id/edtNumero"
            android:hint="@string/numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/colorText"
            android:text="Fecha de vencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="5"
            android:id="@+id/edtFecha"
            android:hint="@string/vencimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <EditText
            android:maxLines="1"
            android:maxLength="3"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:id="@+id/edtCode"
            android:hint="@string/codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:text="Garantizamos la seguridad de los datos de tu tarjeta y no se guardará el Código de seguridad en ningun momento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <Button
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line_border"
            android:text="Guardar"
            android:textAllCaps="false"
            android:textColor="@color/colorText"></Button>

    </LinearLayout>

</LinearLayout>